@@ -72,7 +72,7 @@ from bzrlib.osutils import (kind_marker, isdir,isfile, is_inside_any,
                             is_inside_or_parent_of_any,
                             quotefn, sha_file, split_lines)
 from bzrlib.testament import Testament
-from bzrlib.trace import mutter, note, warning
+from bzrlib.trace import mutter, note, warning, is_quiet
 from bzrlib.xml5 import serializer_v5
 from bzrlib.inventory import Inventory, InventoryEntry
 from bzrlib import symbol_versioning
@@ -104,8 +104,10 @@ class NullCommitReporter(object):
     def renamed(self, change, old_path, new_path):
         pass
 
+    def is_verbose(self):
+        return False
 
-class ReportCommitToLog(NullCommitReporter):
+class DefaultCommitReporter(NullCommitReporter):
 
     def _note(self, format, *args):
         """Output a message.
@@ -114,6 +116,12 @@ class ReportCommitToLog(NullCommitReporter):
         """
         note(format, *args)
 
+    def completed(self, revno, rev_id):
+        self._note('Committed revision %d.', revno)
+
+
+class ReportCommitToLog(DefaultCommitReporter):
+
     def snapshot_change(self, change, path):
         if change == 'unchanged':
             return
@@ -121,9 +129,6 @@ class ReportCommitToLog(NullCommitReporter):
             return
         self._note("%s %s", change, path)
 
-    def completed(self, revno, rev_id):
-        self._note('Committed revision %d.', revno)
-    
     def deleted(self, file_id):
         self._note('deleted %s', file_id)
 
@@ -135,6 +140,9 @@ class ReportCommitToLog(NullCommitReporter):
 
     def renamed(self, change, old_path, new_path):
         self._note('%s %s => %s', change, old_path, new_path)
+
+    def is_verbose(self):
+        return True
 
 
 class Commit(object):
@@ -152,12 +160,13 @@ class Commit(object):
     def __init__(self,
                  reporter=None,
                  config=None):
-        if reporter is not None:
-            self.reporter = reporter
-        else:
-            self.reporter = NullCommitReporter()
+        """Create a Commit object.
+
+        :param reporter: the default reporter to use or None to decide later
+        """
+        self.reporter = reporter
         self.config = config
-        
+ 
     def commit(self,
                message=None,
                timestamp=None,
@@ -167,11 +176,11 @@ class Commit(object):
                rev_id=None,
                allow_pointless=True,
                strict=False,
-               verbose=False,
                revprops=None,
                working_tree=None,
                local=False,
                reporter=None,
+               verbose=False,
                config=None,
                message_callback=None,
                recursive='down'):
@@ -198,6 +207,8 @@ class Commit(object):
 
         :param revprops: Properties for new revision
         :param local: Perform a local only commit.
+        :param reporter: the reporter to use or None for the default
+        :param verbose: if True and the reporter is not None, report everything
         :param recursive: If set to 'down', commit in any subtrees that have
             pending changes of any sort during this commit.
         """
@@ -236,10 +247,10 @@ class Commit(object):
         self.strict = strict
         self.verbose = verbose
 
-        if reporter is None and self.reporter is None:
-            self.reporter = NullCommitReporter()
-        elif reporter is not None:
+        if reporter is not None:
             self.reporter = reporter
+        elif self.reporter is None:
+            self.reporter = self._get_default_reporter()
 
         self.work_tree.lock_write()
         self.pb = bzrlib.ui.ui_factory.nested_progress_bar()
@@ -378,6 +389,15 @@ class Commit(object):
 
         # No actual changes present
         return False
+
+    def _get_default_reporter(self):
+        """Get the default CommitReporter."""
+        if self.verbose:
+            return ReportCommitToLog()
+        elif is_quiet():
+            return NullCommitReporter()
+        else:
+            return DefaultCommitReporter()
 
     def _check_pointless(self):
         if self.allow_pointless:
@@ -619,12 +639,11 @@ class Commit(object):
                 self.builder.record_entry_contents(ie, self.parent_invs, path,
                                                    self.basis_tree)
 
-        # Report what was deleted. We could skip this when no deletes are
-        # detected to gain a performance win, but it arguably serves as a
-        # 'safety check' by informing the user whenever anything disappears.
-        for path, ie in self.basis_inv.iter_entries():
-            if ie.file_id not in self.builder.new_inventory:
-                self.reporter.deleted(path)
+        # Report what was deleted.
+        if self.reporter.is_verbose():
+            for path, ie in self.basis_inv.iter_entries():
+                if ie.file_id not in self.builder.new_inventory:
+                    self.reporter.deleted(path)
 
     def _populate_from_inventory(self, specific_files):
         """Populate the CommitBuilder by walking the working tree inventory."""
@@ -640,6 +659,7 @@ class Commit(object):
         entries = work_inv.iter_entries()
         if not self.builder.record_root_entry:
             entries.next()
+        report_changes = self.reporter.is_verbose()
         for path, existing_ie in entries:
             file_id = existing_ie.file_id
             name = existing_ie.name
@@ -675,7 +695,7 @@ class Commit(object):
             # without it thanks to a unicode normalisation issue. :-(
             definitely_changed = kind != existing_ie.kind 
             self._record_entry(path, file_id, specific_files, kind, name,
-                parent_id, definitely_changed, existing_ie)
+                parent_id, definitely_changed, existing_ie, report_changes)
 
         # Unversion IDs that were found to be deleted
         self.work_tree.unversion(deleted_ids)
@@ -706,7 +726,8 @@ class Commit(object):
             pass
 
     def _record_entry(self, path, file_id, specific_files, kind, name,
-                      parent_id, definitely_changed, existing_ie=None):
+                      parent_id, definitely_changed, existing_ie=None,
+                      report_changes=False):
         "Record the new inventory entry for a path if any."
         # mutter('check %s {%s}', path, file_id)
         if (not specific_files or 
@@ -727,7 +748,8 @@ class Commit(object):
         if ie is not None:
             self.builder.record_entry_contents(ie, self.parent_invs, 
                 path, self.work_tree)
-            self._report_change(ie, path)
+            if report_changes:
+                self._report_change(ie, path)
         return ie
 
     def _report_change(self, ie, path):
